--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "start-app": "yarn dev",
-    "start-sass" : "sass --watch public/styles/style.scss public/styles/style.css"
+    "start-sass": "sass --watch public/styles/style.scss public/styles/style.css"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.1.3",
+    "next-auth": "^3.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.8"
