--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^3.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-charts": "^3.0.15",
     "sass": "^1.32.8"
   }
 }
