--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "start-sass": "sass --watch public/styles/style.scss public/styles/style.css"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
     "next": "10.1.3",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
+    "react-date-range": "^1.1.3",
     "react-dom": "17.0.2",
     "react-google-charts": "^3.0.15",
     "sass": "^1.32.8"
