--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.11.3",
     "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "next": "10.1.3",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
