--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@date-io/date-fns": "1.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.3",
     "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "next": "10.1.3",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
