--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^2.0.0-beta.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "10.1.3",
+    "next": "^11.0.0",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
     "react-date-range": "^1.1.3",
