--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-date-range": "^1.1.3",
     "react-dom": "17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-map-gl": "^6.1.16",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.8"
   }
