--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=https://yoga-liard.vercel.app/api/auth
+NEXTAUTH_URL=http://localhost:3000
 SECRET=a36714a47da64c2fd93bac1382159b37
-GOOGLE_ID=111917461799-ls8dq1gq1deejpniap501i4st4fi4jn7.apps.googleusercontent.com
-GOOGLE_SECRET=aU1I7183KOjyYSCxogu2Plm0
+GOOGLE_ID=111917461799-19htbvgrpr925288np33o937l9ahi33g.apps.googleusercontent.com
+GOOGLE_SECRET=oCFCn1L4wyU-oilcJWfATMB9
