--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=https://yoga-fazakasalexandra.vercel.app
+NEXTAUTH_URL=http://localhost:3000
 SECRET=a36714a47da64c2fd93bac1382159b37
-GOOGLE_ID=111917461799-ohmg9jj9thaj8k1vaj0mntn1jrp67j7o.apps.googleusercontent.com
-GOOGLE_SECRET=QEeRCH_3hxKB7QFbjBQKjXK_
+GOOGLE_ID=111917461799-19htbvgrpr925288np33o937l9ahi33g.apps.googleusercontent.com
+GOOGLE_SECRET=oCFCn1L4wyU-oilcJWfATMB9
