--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "start-app": "yarn dev",
-    "start-sass": "sass --watch public/styles/style.scss public/styles/style.css"
+    "sass": "sass --watch public/styles/style.scss public/styles/style.css"
   },
   "dependencies": {
     "@date-io/date-fns": "1.x",
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "date-fns": "^2.0.0-beta.5",
+    "is-url": "^1.2.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "^11.0.0",
@@ -26,8 +27,12 @@
     "react-date-range": "^1.1.3",
     "react-dom": "17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-inlinesvg": "^2.3.0",
     "react-map-gl": "^6.1.16",
     "react-toastify": "^7.0.4",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "slate": "^0.65.3",
+    "slate-history": "^0.65.3",
+    "slate-react": "^0.65.3"
   }
 }
