--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SECRET=a36714a47da64c2fd93bac1382159b37
 GOOGLE_ID=111917461799-56erm4vj01g2bt6tm9tbeh72ts1vajua.apps.googleusercontent.com
 GOOGLE_SECRET=J__szT_DLyR6tmMj3qKY-D5v
 NEXT_PUBLIC_DOMAIN=kango-henna.vercel.app
+NEXT_PUBLIC_API=https://kango.afazakas.com
+
