change oauth credentials

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ GOOGLE_SECRET=J__szT_DLyR6tmMj3qKY-D5v
 NEXT_PUBLIC_DOMAIN=kango-henna.vercel.app
 NEXT_PUBLIC_API=https://kango.afazakas.com
 
+PROD_GOOGLE_ID=111917461799-s3jcij28u2susqapsnpni4iu1hrlstik.apps.googleusercontent.com
+PROD_GOOGLE_SECRET=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
