--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "next": "^11.0.0",
     "next-auth": "^3.13.3",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-date-range": "^1.1.3",
     "react-dom": "17.0.2",
