--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@material-ui/core": "^4.11.3",
     "beautiful-react-hooks": "^1.0.1",
     "date-fns": "^2.0.0-beta.5",
+    "i18nexus-cli": "^2.0.2",
     "is-url": "^1.2.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "^11.0.0",
     "next-auth": "^3.13.3",
+    "next-i18next": "^8.9.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-date-range": "^1.1.3",
