--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SECRET=a36714a47da64c2fd93bac1382159b37
-NEXT_PUBLIC_DOMAIN=yoga-dev.vercel.app
-NEXT_PUBLIC_API=https://kango.afazakas.com
-PROD_GOOGLE_ID=111917461799-vonk16fq0bu6lklrqf7bt0pf1fo2ruq0.apps.googleusercontent.com
-PROD_GOOGLE_SECRET=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
+SECRET=
+NEXT_PUBLIC_DOMAIN=
+NEXT_PUBLIC_API=
+PROD_GOOGLE_ID=
+PROD_GOOGLE_SECRET=
