--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "axios": "^0.23.0",
     "beautiful-react-hooks": "^1.0.1",
     "date-fns": "^2.0.0-beta.5",
     "i18nexus-cli": "^2.0.2",
