--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.32.8",
     "slate": "^0.65.3",
     "slate-history": "^0.65.3",
-    "slate-react": "^0.65.3"
+    "slate-react": "^0.65.3",
+    "unsplash-js": "^7.0.15"
   }
 }
